--- a/css/main.css
+++ b/css/main.css
@@ -58,11 +58,6 @@ body {
 
 /* Responsive images */
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 /* Responsive video */
 
 .video {
@@ -1334,6 +1329,172 @@ template {
   text-shadow: 0px 4px 1px rgba(219, 218, 218, 0.25);
 }
 
+.catalog-slider-main-wrap {
+  position: relative;
+}
+
+.catalog-slider-main-wrap .next,
+.catalog-slider-main-wrap .prev {
+  display: none;
+}
+
+.catalog-slider-wrap {
+  overflow: hidden;
+  width: 17.5rem;
+  height: 35.1875rem;
+  margin: 0 auto 6.25rem auto;
+}
+
+.catalog-slider-wrap .owl-stage-outer {
+  overflow: inherit !important;
+}
+
+.catalog-slider {
+  margin: 8.75rem auto 3.125rem auto;
+}
+
+.catalog-slider .catalog-slide {
+  position: relative;
+  width: 17.5rem;
+  height: 25.9375rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #FFFFFF;
+  box-shadow: 0px 5px 13px rgba(120, 118, 118, 0.25);
+  border-radius: 1.25rem;
+  transition: all 0.5s ease-out;
+}
+
+.catalog-slider .catalog-slide:hover {
+  transform: scale(1.03);
+}
+
+.catalog-slider .catalog-slide__title {
+  margin-bottom: 1.25rem;
+  font-family: "AmaticSC-Bold";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.875rem;
+  text-align: center;
+  color: #F47F12;
+}
+
+.catalog-slider .catalog-slide__price {
+  font-family: "AmaticSC-Bold";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.875rem;
+  line-height: 100%;
+  color: #000000;
+}
+
+.catalog-slider .catalog-slide-count {
+  min-width: 4.0625rem;
+  min-height: 1.75rem;
+  margin: 1.75rem 0 1.25rem 0;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+.catalog-slider .catalog-slide-count .count__number {
+  min-width: 1.5625rem;
+  min-height: 1.5625rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+  color: #fff;
+}
+
+.catalog-slider .catalog-slide-count .count__arrow-left,
+.catalog-slider .catalog-slide-count .count__arrow-right {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.catalog-slider .catalog-slide-arrows {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.375rem;
+  min-width: 2.5rem;
+  min-height: 1.75rem;
+}
+
+.catalog-slider .catalog-slide .catalog-slide-btns {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  height: 5.9375rem;
+}
+
+.catalog-slider .catalog-slide .details-btn,
+.catalog-slider .catalog-slide .to-cart-btn {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.125rem;
+}
+
+.catalog-slider .catalog-slide .details-btn {
+  color: #000000;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0px 0px 0px 20px;
+}
+
+.catalog-slider .catalog-slide .to-cart-btn {
+  color: #FFFFFF;
+  background: #FF9C36;
+  border-radius: 0px 0px 20px 0px;
+}
+
+.catalog-slider .avocado-toy {
+  width: 11.25rem;
+  height: 11.25rem;
+  margin: -4.25rem 0 3.0625rem 0;
+}
+
+.catalog-slider .shark-toy {
+  margin-top: -7.1875rem;
+  width: 30.375rem;
+  height: 22.125rem;
+}
+
+.catalog-slider .shark-toy + .catalog-slide__title {
+  margin-top: -4.875rem;
+}
+
+.catalog-slider .lama-toy {
+  width: 10.375rem;
+  height: 10.375rem;
+  margin: -4.0625rem 0 3.5rem 0;
+}
+
+.catalog-slider .cat-toy {
+  width: 13.125rem;
+  height: 13.125rem;
+  margin: -3.75rem 0 0.625rem 0;
+}
+
+.catalog-slider .corgi-toy {
+  width: 18.25rem;
+  height: 15.0625rem;
+  margin: -6.375rem 0 1.25rem 0;
+}
+
+.catalog-slider .seal-toy {
+  width: 18.25rem;
+  height: 15.0625rem;
+  margin: -9.0625rem 0 4.0625rem 0;
+}
+
 @media screen and (min-width: 320px) {
   .container-fluid {
     padding-left: 6px;
@@ -1786,6 +1947,29 @@ template {
   .bisquit__text {
     font-size: 1rem;
   }
+
+  .catalog-slider-main-wrap .next,
+  .catalog-slider-main-wrap .prev {
+    display: block;
+    position: absolute;
+    z-index: 2000;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0.625rem;
+    cursor: pointer;
+  }
+
+  .catalog-slider-main-wrap .next {
+    left: 0.9375rem;
+  }
+
+  .catalog-slider-main-wrap .prev {
+    right: 0.9375rem;
+  }
+
+  .catalog-slider-wrap {
+    width: 39.375rem;
+  }
 }
 
 @media screen and (min-width: 800px) {
@@ -2109,6 +2293,27 @@ template {
   .bisquit__text {
     font-size: 1.375rem;
   }
+
+  .catalog-slider-wrap {
+    height: 36.25rem;
+  }
+
+  .catalog-slider .catalog-slide {
+    height: 26.875rem;
+  }
+
+  .catalog-slider .catalog-slide__title {
+    font-size: 2.5rem;
+  }
+
+  .catalog-slider .catalog-slide__price {
+    font-size: 2.25rem;
+  }
+
+  .catalog-slider .catalog-slide .details-btn,
+  .catalog-slider .catalog-slide .to-cart-btn {
+    font-size: 1.25rem;
+  }
 }
 
 @media (min-width: 1100px) {
@@ -2206,6 +2411,67 @@ template {
   .bisquit-content-4 {
     top: 46.8125rem;
     right: 37.5625rem;
+  }
+
+  .catalog-slider-main-wrap .next {
+    left: 5rem;
+  }
+
+  .catalog-slider-main-wrap .prev {
+    right: 5rem;
+  }
+
+  .catalog-slider-wrap {
+    width: 62.5rem;
+    height: 39.0625rem;
+  }
+
+  .catalog-slider .catalog-slide {
+    height: 29.375rem;
+  }
+
+  .catalog-slider .catalog-slide:hover {
+    transform: scale(1.1);
+  }
+
+  .catalog-slider .avocado-toy {
+    width: 14rem;
+    height: 14rem;
+    margin: -5.625rem 0 4.125rem 0;
+  }
+
+  .catalog-slider .shark-toy {
+    margin-top: -9.0625rem;
+    width: 33.125rem;
+    height: 24.875rem;
+  }
+
+  .catalog-slider .shark-toy + .catalog-slide__title {
+    margin-top: -3.625rem;
+  }
+
+  .catalog-slider .lama-toy {
+    width: 13.125rem;
+    height: 13.125rem;
+    margin: -5.3125rem 0 4.375rem 0;
+  }
+
+  .catalog-slider .cat-toy {
+    width: 15.875rem;
+    height: 15.875rem;
+    margin: -5.1875rem 0 1.5625rem 0;
+  }
+
+  .catalog-slider .corgi-toy {
+    width: 21rem;
+    height: 17.8125rem;
+    margin: -7.3125rem 0 1.625rem 0;
+  }
+
+  .catalog-slider .seal-toy {
+    width: 21rem;
+    height: 17.8125rem;
+    margin: -11.4375rem 0 5.8125rem 0;
   }
 }
 
@@ -2424,6 +2690,33 @@ template {
 
   .footer .col-wrap {
     width: 56%;
+  }
+
+  .catalog-slider-main-wrap .next {
+    left: 1.5625rem;
+  }
+
+  .catalog-slider-main-wrap .prev {
+    right: 1.5625rem;
+  }
+
+  .catalog-slider-wrap {
+    width: 85.1875rem;
+    height: 50rem;
+    margin: 0 auto 12.5rem auto;
+  }
+
+  .catalog-slider {
+    margin: 8.75rem auto 3.125rem auto;
+  }
+
+  .catalog-slider .catalog-slide {
+    width: 23.9375rem;
+    height: 35.1875rem;
+  }
+
+  .catalog-slider .catalog-slide__title {
+    margin-bottom: 5.4375rem;
   }
 }
 
