--- a/css/main.css
+++ b/css/main.css
@@ -953,6 +953,38 @@ template {
   display: none;
 }
 
+.header-catalog {
+  height: 1000px;
+}
+
+.header-cart .logo {
+  margin-bottom: 1.25rem;
+}
+
+.back-arrow {
+  position: absolute;
+  z-index: 2000;
+  top: 2.9375rem;
+  left: 2.3125rem;
+  font-family: "AmaticSC-Bold";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 0.875rem;
+  line-height: 50%;
+  text-align: center;
+  color: #FFFCFC;
+}
+
+.back-arrow svg {
+  position: absolute;
+  top: 50%;
+  left: -0.9375rem;
+  transform: translateY(-50%);
+  width: 0.75rem;
+  height: 0.75rem;
+  fill: #fff;
+}
+
 /* BLOCKS */
 
 .top-menu {
@@ -1373,7 +1405,7 @@ template {
 }
 
 .catalog-slider .catalog-slide:hover {
-  transform: scale(1.03);
+  transform: scale(0.9);
 }
 
 .catalog-slider .catalog-slide__title {
@@ -1527,7 +1559,7 @@ template {
   width: 19.375rem;
   display: flex;
   flex-direction: column;
-  padding: 1.25rem 1.5rem 0 1.5rem;
+  padding: 0.625rem 1.5rem 0 1.5rem;
   background: #fff;
 }
 
@@ -1545,7 +1577,7 @@ template {
 }
 
 .card .toy-title {
-  margin: 4.125rem 0 2.5rem 0;
+  margin: 1.25rem 0 1.25rem 0;
   text-align: center;
   font-family: "Montserrat-Regular";
   font-weight: normal;
@@ -1589,7 +1621,7 @@ template {
   width: 11.5625rem;
   height: 10.8125rem;
   border-radius: 0.3125rem;
-  margin: 0 1rem 3.25rem 0;
+  margin: 0 1rem 0.625rem 0;
   overflow: hidden;
   cursor: pointer;
 }
@@ -1602,7 +1634,7 @@ template {
 
 .card .to-catalog-btn,
 .card .to-cart-btn {
-  height: 4.9375rem;
+  height: 3.125rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1623,8 +1655,8 @@ template {
 
 .card .card-close {
   position: absolute;
-  right: 1.25rem;
-  top: 1.25rem;
+  right: 0.1875rem;
+  top: 0.1875rem;
   width: 2rem;
   height: 2rem;
   opacity: 0.3;
@@ -1656,7 +1688,7 @@ template {
 
 .card .toy-info {
   max-width: 19.5rem;
-  margin: 3.25rem 0 2.125rem 0;
+  margin: 0.3125rem 0 0.3125rem 0;
 }
 
 .card .toy-size,
@@ -1674,7 +1706,7 @@ template {
 
 .card .toy-size,
 .card .toy-material {
-  margin-bottom: 1.3125rem;
+  margin-bottom: 0.625rem;
 }
 
 .card .toy-description {
@@ -1684,7 +1716,7 @@ template {
 .card .price-block {
   display: flex;
   align-items: center;
-  margin-bottom: 5.875rem;
+  margin-bottom: 2.8125rem;
 }
 
 .card .toy-count {
@@ -1775,7 +1807,7 @@ template {
 .full-img-close {
   position: absolute;
   z-index: 7000;
-  right: 0.25rem;
+  right: -0.125rem;
   top: -1.875rem;
   width: 2rem;
   height: 2rem;
@@ -1799,6 +1831,214 @@ template {
 
 .full-img-close::after {
   transform: rotate(-45deg);
+}
+
+.cart-table {
+  width: 17.5rem;
+  margin: auto;
+}
+
+.cart__title {
+  text-align: center;
+  margin-bottom: 1.25rem;
+  font-family: "Montserrat-SemiBold";
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.25rem;
+  line-height: 50%;
+  color: #000000;
+}
+
+.cart-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.25rem;
+}
+
+.cart__item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.25rem;
+}
+
+.cart__item::after {
+  display: none;
+}
+
+.cart__item [type="checkbox"]:not(:checked),
+.cart__item [type="checkbox"]:checked {
+  position: absolute;
+  left: -9999px;
+}
+
+.cart__item [type="checkbox"]:not(:checked) + label,
+.cart__item [type="checkbox"]:checked + label {
+  position: relative;
+  transform: translate(-50px, 28px);
+  padding-left: 1.95em;
+  cursor: pointer;
+}
+
+.cart__item [type="checkbox"]:not(:checked) + label::before,
+.cart__item [type="checkbox"]:checked + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 0.25rem;
+  border: 0.125rem solid rgba(0, 0, 0, 0.32);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
+.cart__item [type="checkbox"]:not(:checked) + label::after,
+.cart__item [type="checkbox"]:checked + label::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  font-size: 1.3em;
+  line-height: 0.8;
+  background: #09ad7e;
+  background-image: url(../img/check-mark.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 50%;
+  transition: all .2s;
+}
+
+.cart__item [type="checkbox"]:not(:checked) + label:after {
+  opacity: 0;
+  transform: scale(0);
+}
+
+.cart__item [type="checkbox"]:checked + label:after {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.cart__item [type="checkbox"]:checked:focus + label:before,
+.cart__item [type="checkbox"]:not(:checked):focus + label:before {
+  border: 2px dotted blue;
+}
+
+.toy__name {
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.125rem;
+  line-height: 50%;
+  color: #000000;
+}
+
+.toy__price {
+  font-family: "Montserrat-SemiBold";
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.375rem;
+  line-height: 50%;
+  color: #D36A08;
+}
+
+.toy__img {
+  width: 4.375rem;
+  height: 4.375rem;
+  margin-bottom: 0.625rem;
+}
+
+.toy__img img {
+  width: 4.375rem;
+  height: 4.375rem;
+}
+
+.toy-count {
+  margin: 1.25rem 0;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+.toy-count .count__number {
+  min-width: 1.5625rem;
+  min-height: 1.5625rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+  color: #fff;
+}
+
+.toy-count-arrows {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.375rem;
+  min-width: 2.5rem;
+  min-height: 1.75rem;
+}
+
+.toy-count-arrows .count__arrow-left,
+.toy-count-arrows .count__arrow-right {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.cart-total {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.875rem;
+}
+
+.total__title {
+  margin-bottom: 1.25rem;
+  font-family: "AmaticSC-Bold";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.625rem;
+  line-height: 50%;
+  color: #000000;
+}
+
+.total__num {
+  width: 12.5rem;
+  padding: 0.9375rem 1.875rem;
+  border: 0.0625rem solid rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
+  border-radius: 0.625rem;
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2.5rem;
+  line-height: 50%;
+  color: #000000;
+}
+
+.cart-btn {
+  width: 9.375rem;
+  height: 2.875rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto 3.125rem auto;
+  background: #F47F12;
+  box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);
+  border-radius: 0.625rem;
+  font-family: "Montserrat-SemiBold";
+  font-weight: 600;
+  font-style: normal;
+  font-size: 0.9375rem;
+  line-height: 50%;
+  color: #FFFFFF;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 320px) {
@@ -1987,6 +2227,15 @@ template {
     right: 3.125rem;
   }
 
+  .header-cart .logo {
+    margin-bottom: 2.5rem;
+  }
+
+  .back-arrow {
+    top: 4.375rem;
+    font-size: 1rem;
+  }
+
   .top-menu .menu__item {
     margin-left: 5rem;
   }
@@ -2092,6 +2341,10 @@ template {
     width: 31.25rem;
   }
 
+  .card .price {
+    font-size: 0.875rem;
+  }
+
   .full-img {
     width: 31.25rem;
     height: 31.25rem;
@@ -2100,6 +2353,40 @@ template {
   .full-img img {
     width: 31.25rem;
     height: 31.25rem;
+  }
+
+  .full-img-close {
+    right: -0.25rem;
+  }
+
+  .full-img-close::before,
+  .full-img-close::after {
+    background-color: #fff;
+  }
+
+  .cart__title {
+    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
+  }
+
+  .cart__item [type="checkbox"]:not(:checked) + label,
+  .cart__item [type="checkbox"]:checked + label {
+    transform: translate(-66px, 42px);
+  }
+
+  .toy__name {
+    font-size: 1.25rem;
+  }
+
+  .toy__img {
+    width: 6.25rem;
+    height: 6.25rem;
+    margin-bottom: 1.25rem;
+  }
+
+  .toy__img img {
+    width: 6.25rem;
+    height: 6.25rem;
   }
 }
 
@@ -2185,6 +2472,18 @@ template {
 
   .cite-left {
     left: 5rem;
+  }
+
+  .back-arrow {
+    top: 4.6875rem;
+    left: 4.0625rem;
+    font-size: 1.5rem;
+  }
+
+  .back-arrow svg {
+    left: -1.25rem;
+    width: 0.875rem;
+    height: 0.875rem;
   }
 
   .top-menu .menu-list {
@@ -2303,13 +2602,13 @@ template {
   }
 
   .full-img {
-    width: 43.75rem;
-    height: 43.75rem;
+    width: 31.25rem;
+    height: 31.25rem;
   }
 
   .full-img img {
-    width: 43.75rem;
-    height: 43.75rem;
+    width: 31.25rem;
+    height: 31.25rem;
   }
 
   .full-img-close {
@@ -2317,9 +2616,49 @@ template {
     top: -0.25rem;
   }
 
-  .full-img-close::before,
-  .full-img-close::after {
-    background-color: #fff;
+  .cart-table {
+    width: 43.75rem;
+  }
+
+  .cart-list {
+    margin-bottom: 0;
+  }
+
+  .cart__item {
+    flex-direction: row;
+  }
+
+  .cart__item [type="checkbox"]:not(:checked) + label,
+  .cart__item [type="checkbox"]:checked + label {
+    transform: translate(-10px, -18px);
+  }
+
+  .toy__name {
+    margin-right: 1.875rem;
+  }
+
+  .toy__price {
+    font-size: 1.625rem;
+  }
+
+  .toy__img {
+    width: 6.25rem;
+    height: 6.25rem;
+    margin: 0 1.875rem 1.25rem 0;
+  }
+
+  .toy-count {
+    margin-right: 1.875rem;
+  }
+
+  .total__title {
+    font-size: 1.75rem;
+  }
+
+  .cart-btn {
+    width: 12.5rem;
+    height: 4.375rem;
+    font-size: 1.125rem;
   }
 }
 
@@ -2337,33 +2676,20 @@ template {
 
 @media (min-width: 900px) {
   .card {
-    width: 54.375rem;
-    min-height: 43.9375rem;
+    min-height: 35.3125rem;
     flex-direction: row;
-    width: 54.375rem;
+    width: 42.8125rem;
     justify-content: space-between;
     padding: 1.25rem 0 0 0;
   }
 
   .card .logo {
     display: block;
-    width: 13rem;
-  }
-
-  .card .logo__title {
-    font-size: 6rem;
-  }
-
-  .card .logo__subtitle {
-    margin-top: 1.25rem;
-    font-size: 0.875rem;
+    width: 8.75rem;
   }
 
   .card .logo img {
-    right: 0;
-    top: 5.625rem;
-    width: 5.625rem;
-    height: 3.4375rem;
+    right: 1.6875rem;
   }
 
   .card .left-col,
@@ -2376,11 +2702,11 @@ template {
   }
 
   .card .left-col__inner {
-    padding-left: 3.8125rem;
+    padding-left: 1.25rem;
   }
 
   .card .toy-title {
-    margin: 4.125rem 4.375rem 4.25rem 0;
+    margin: 4.125rem 4.375rem 1.875rem 0;
     font-size: 1.875rem;
   }
 
@@ -2391,6 +2717,7 @@ template {
   .card .img-list {
     order: 1;
     flex-direction: row;
+    margin-bottom: 1.25rem;
   }
 
   .card .img__item img {
@@ -2409,19 +2736,25 @@ template {
   }
 
   .card .img__item-big img {
-    width: 20.8125rem;
-    height: 19.4375rem;
+    width: 12.5rem;
+    height: 12.5rem;
   }
 
   .card .img__item-big {
-    width: 20.8125rem;
-    height: 19.4375rem;
+    width: 12.5rem;
+    height: 12.5rem;
     margin-bottom: 3.1875rem;
   }
 
   .card .to-catalog-btn,
   .card .to-cart-btn {
-    font-size: 1.25rem;
+    height: 4.0625rem;
+    font-size: 1rem;
+  }
+
+  .card .card-close {
+    right: 1.25rem;
+    top: 1.25rem;
   }
 
   .card .toy-info {
@@ -2796,6 +3129,22 @@ template {
   .overlay {
     top: 2.75rem;
   }
+
+  .card {
+    min-height: 32.1875rem;
+  }
+
+  .card .logo {
+    width: 10.625rem;
+  }
+
+  .card .logo img {
+    right: 0.9375rem;
+  }
+
+  .card .toy-info {
+    margin: 3.125rem 0 2.125rem 0;
+  }
 }
 
 @media (min-width: 1024px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1024px) and (min-resolution: 192dpi) {
@@ -2835,6 +3184,10 @@ template {
 
   .footer .col-wrap {
     width: 80%;
+  }
+
+  .header-cart .logo {
+    margin-bottom: 13.8125rem;
   }
 
   .main-slider {
@@ -2925,10 +3278,6 @@ template {
     margin-left: 1.25rem;
   }
 
-  .catalog-slider .catalog-slide:hover {
-    transform: scale(1.1);
-  }
-
   .catalog-slider .avocado-toy {
     width: 14rem;
     height: 14rem;
@@ -2963,6 +3312,127 @@ template {
     width: 21rem;
     height: 17.8125rem;
     margin: -11.4375rem 0 5.8125rem 0;
+  }
+
+  .card .toy-size,
+  .card .toy-material {
+    margin-bottom: 1.3125rem;
+  }
+
+  .card .price-block {
+    margin-bottom: 0;
+  }
+
+  .full-img {
+    width: 37.5rem;
+    height: 37.5rem;
+  }
+
+  .full-img img {
+    width: 37.5rem;
+    height: 37.5rem;
+  }
+
+  .full-img-close::before,
+  .full-img-close::after {
+    background-color: #fff;
+  }
+
+  .cart-table {
+    width: 75rem;
+  }
+
+  .cart__title {
+    margin-bottom: 2rem;
+    font-size: 2.375rem;
+  }
+
+  .cart-list {
+    margin-bottom: 6.3125rem;
+  }
+
+  .cart__item {
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 8.125rem;
+    margin-bottom: 0;
+  }
+
+  .cart__item::after {
+    display: block;
+    position: absolute;
+    content: "";
+    z-index: 5;
+    bottom: 0;
+    right: 0;
+    width: 66.875rem;
+    height: 0.0625rem;
+    background: rgba(0, 0, 0, 0.32);
+  }
+
+  .cart__item [type="checkbox"]:not(:checked) + label,
+  .cart__item [type="checkbox"]:checked + label {
+    transform: translate(66px, -14px);
+  }
+
+  .cart__item [type="checkbox"]:not(:checked) + label::before,
+  .cart__item [type="checkbox"]:checked + label::before {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .cart__item [type="checkbox"]:not(:checked) + label::after,
+  .cart__item [type="checkbox"]:checked + label::after {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .toy__name {
+    font-size: 2.3125rem;
+  }
+
+  .toy__price {
+    font-size: 1.9375rem;
+  }
+
+  .toy__img {
+    width: 8.75rem;
+    height: 8.75rem;
+    margin: 0;
+  }
+
+  .toy__img img {
+    width: 8.75rem;
+    height: 8.75rem;
+  }
+
+  .toy-count {
+    margin: 1.75rem 0 1.25rem 0;
+  }
+
+  .cart-total {
+    align-items: center;
+    justify-content: flex-end;
+    flex-direction: row;
+    margin-bottom: 5.4375rem;
+  }
+
+  .total__title {
+    margin: 0 0.625rem 0 0;
+    font-size: 1.875rem;
+  }
+
+  .total__num {
+    width: 19.125rem;
+    padding: 1.3125rem 5.375rem;
+  }
+
+  .cart-btn {
+    width: 23.6875rem;
+    height: 5.8125rem;
+    margin: 0 0 10.0625rem auto;
+    font-size: 1.875rem;
   }
 }
 
@@ -3173,6 +3643,26 @@ template {
   .slider-wrap {
     padding-left: 25%;
   }
+
+  .card .logo {
+    width: 13rem;
+  }
+
+  .card .logo__title {
+    font-size: 6rem;
+  }
+
+  .card .logo__subtitle {
+    margin-top: 1.25rem;
+    font-size: 0.875rem;
+  }
+
+  .card .logo img {
+    right: 0;
+    top: 5.625rem;
+    width: 5.625rem;
+    height: 3.4375rem;
+  }
 }
 
 @media (min-width: 1440px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1440px) and (min-resolution: 192dpi) {
@@ -3221,13 +3711,21 @@ template {
   .catalog-slider .catalog-slide__title {
     margin-bottom: 5.4375rem;
   }
-
-  .overlay {
-    top: 3.25rem;
-  }
 }
 
 @media (min-width: 1920px) {
+  .back-arrow {
+    top: 6.6875rem;
+    left: 6.25rem;
+    font-size: 1.875rem;
+  }
+
+  .back-arrow svg {
+    left: -1.5625rem;
+    width: 1rem;
+    height: 1rem;
+  }
+
   .tree {
     width: auto;
   }
@@ -3321,19 +3819,73 @@ template {
     height: 24.875rem;
   }
 
+  .overlay {
+    top: 3.25rem;
+  }
+
+  .card {
+    padding: 1.25rem 1.5rem 0 1.5rem;
+    min-height: 43.9375rem;
+    flex-direction: row;
+    width: 54.375rem;
+    justify-content: space-between;
+    padding: 1.25rem 0 0 0;
+  }
+
+  .card .left-col__inner {
+    padding-left: 3.8125rem;
+  }
+
+  .card .toy-title {
+    margin: 4.125rem 4.375rem 4.25rem 0;
+  }
+
+  .card .img__item-big img {
+    width: 20.8125rem;
+    height: 19.4375rem;
+  }
+
+  .card .img__item-big {
+    width: 20.8125rem;
+    height: 19.4375rem;
+  }
+
+  .card .to-catalog-btn,
+  .card .to-cart-btn {
+    height: 4.9375rem;
+    font-size: 1.25rem;
+  }
+
+  .card .toy-info {
+    margin: 6rem 0 2.125rem 0;
+  }
+
   .full-img {
-    width: 56.25rem;
-    height: 56.25rem;
+    width: 50rem;
+    height: 50rem;
   }
 
   .full-img img {
-    width: 56.25rem;
-    height: 56.25rem;
+    width: 50rem;
+    height: 50rem;
   }
 
   .full-img-close::before,
   .full-img-close::after {
     background-color: #fff;
+  }
+
+  .cart-table {
+    width: 93.75rem;
+  }
+
+  .cart__item::after {
+    width: 80.875rem;
+  }
+
+  .cart__item [type="checkbox"]:not(:checked) + label,
+  .cart__item [type="checkbox"]:checked + label {
+    transform: translate(150px, -14px);
   }
 }
 
