--- a/css/main.css
+++ b/css/main.css
@@ -985,6 +985,104 @@ template {
   fill: #fff;
 }
 
+.form {
+  display: none;
+  position: absolute;
+  z-index: 5000;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 18.75rem;
+  padding: 0.625rem;
+  background: #fff;
+}
+
+.form--active {
+  display: block;
+}
+
+.form__back {
+  position: relative;
+  left: 3.125rem;
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 0.9375rem;
+  line-height: 80%;
+  color: #000000;
+  cursor: pointer;
+}
+
+.form__back svg {
+  position: absolute;
+  top: 50%;
+  left: -2.5rem;
+  transform: translateY(-50%);
+}
+
+.form__title {
+  width: 17.5rem;
+  margin: 0.625rem auto;
+  font-family: "Montserrat-SemiBold";
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.125rem;
+  line-height: 102%;
+  text-align: center;
+  color: #000000;
+}
+
+.form .inputs-block {
+  width: 17.5rem;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form .inputs-block input {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  outline: none;
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.125rem;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.form .input-block {
+  width: 100%;
+}
+
+.form .input-block:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
+
+.form label {
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 0.75rem;
+  color: #000000;
+}
+
+.form input[type="submit"] {
+  width: 10rem;
+  height: 3.125rem;
+  background: #32BEA6;
+  border-radius: 0.625rem;
+  border: none;
+  outline: none;
+  font-family: "Montserrat-SemiBold";
+  font-weight: 600;
+  font-style: normal;
+  font-size: 0.9375rem;
+  line-height: 80%;
+  color: #FFFFFF;
+}
+
 /* BLOCKS */
 
 .top-menu {
@@ -2236,6 +2334,18 @@ template {
     font-size: 1rem;
   }
 
+  .form {
+    width: 31.25rem;
+  }
+
+  .form__title {
+    width: 20.9375rem;
+  }
+
+  .form .inputs-block {
+    width: 25rem;
+  }
+
   .top-menu .menu__item {
     margin-left: 5rem;
   }
@@ -3127,7 +3237,7 @@ template {
   }
 
   .overlay {
-    top: 2.75rem;
+    top: 2.8125rem;
   }
 
   .card {
@@ -3188,6 +3298,26 @@ template {
 
   .header-cart .logo {
     margin-bottom: 13.8125rem;
+  }
+
+  .form {
+    width: 43.75rem;
+  }
+
+  .form__title {
+    width: 25.625rem;
+    margin: 1.25rem auto;
+    font-size: 1.375rem;
+  }
+
+  .form label {
+    font-size: 0.9375rem;
+  }
+
+  .form input[type="submit"] {
+    width: 10.625rem;
+    height: 3.75rem;
+    font-size: 1.25rem;
   }
 
   .main-slider {
@@ -3724,6 +3854,40 @@ template {
     left: -1.5625rem;
     width: 1rem;
     height: 1rem;
+  }
+
+  .form {
+    width: 54.375rem;
+    min-height: 43.9375rem;
+    padding: 3.125rem 5rem 3.125rem 5rem;
+  }
+
+  .form__back {
+    font-size: 1.5625rem;
+  }
+
+  .form__back svg {
+    left: -1.875rem;
+  }
+
+  .form__title {
+    width: 35rem;
+    margin: 1.875rem auto;
+    font-size: 1.875rem;
+  }
+
+  .form .inputs-block {
+    width: 31.25rem;
+  }
+
+  .form .inputs-block input {
+    font-size: 1.5625rem;
+  }
+
+  .form input[type="submit"] {
+    width: 11.4375rem;
+    height: 4.4375rem;
+    font-size: 1.5625rem;
   }
 
   .tree {
