--- a/css/main.css
+++ b/css/main.css
@@ -627,6 +627,31 @@ template {
   flex-direction: column;
 }
 
+.cart__link {
+  position: relative;
+}
+
+.cart__num {
+  position: absolute;
+  content: "";
+  z-index: 3000;
+  top: 2.3125rem;
+  right: 2.1875rem;
+  padding: 0.5rem 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 0.875rem;
+  line-height: 100%;
+  color: #FFFFFF;
+  height: 1.25rem;
+  border-radius: 50%;
+  background: #EF1C1C;
+}
+
 .cart {
   position: absolute;
   z-index: 1000;
@@ -951,6 +976,10 @@ template {
 
 .footer .unicorn-line {
   display: none;
+}
+
+.header-cart {
+  min-height: 100vh;
 }
 
 .header-cart .logo {
@@ -1727,7 +1756,7 @@ template {
 }
 
 .card .to-catalog-btn,
-.card .to-cart-btn {
+.card .to-cart-btn--card {
   height: 3.125rem;
   display: flex;
   flex-direction: column;
@@ -1742,7 +1771,7 @@ template {
   cursor: pointer;
 }
 
-.card .to-cart-btn {
+.card .to-cart-btn--card {
   color: #FFFFFF;
   background: #FF9C36;
 }
@@ -1831,8 +1860,8 @@ template {
   min-height: 1.75rem;
 }
 
-.card .count__arrow-left,
-.card .count__arrow-right {
+.card .count__arrow-minus,
+.card .count__arrow-plus {
   font-weight: bold;
   cursor: pointer;
 }
@@ -1858,7 +1887,7 @@ template {
 }
 
 .card .to-catalog-btn,
-.card .to-cart-btn {
+.card .to-cart-btn--card {
   position: absolute;
   bottom: 0;
   width: 50%;
@@ -1872,7 +1901,7 @@ template {
   border: 1px solid rgba(0, 0, 0, 0.15);
 }
 
-.card .to-cart-btn {
+.card .to-cart-btn--card {
   right: 0;
   color: #FFFFFF;
   background: #FF9C36;
@@ -1962,68 +1991,6 @@ template {
   display: none;
 }
 
-.cart__item [type="checkbox"]:not(:checked),
-.cart__item [type="checkbox"]:checked {
-  position: absolute;
-  left: -9999px;
-}
-
-.cart__item [type="checkbox"]:not(:checked) + label,
-.cart__item [type="checkbox"]:checked + label {
-  position: relative;
-  transform: translate(-50px, 28px);
-  padding-left: 1.95em;
-  cursor: pointer;
-}
-
-.cart__item [type="checkbox"]:not(:checked) + label::before,
-.cart__item [type="checkbox"]:checked + label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 1rem;
-  height: 1rem;
-  border-radius: 0.25rem;
-  border: 0.125rem solid rgba(0, 0, 0, 0.32);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-}
-
-.cart__item [type="checkbox"]:not(:checked) + label::after,
-.cart__item [type="checkbox"]:checked + label::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-  font-size: 1.3em;
-  line-height: 0.8;
-  background: #09ad7e;
-  background-image: url(../img/check-mark.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 50%;
-  transition: all .2s;
-}
-
-.cart__item [type="checkbox"]:not(:checked) + label:after {
-  opacity: 0;
-  transform: scale(0);
-}
-
-.cart__item [type="checkbox"]:checked + label:after {
-  opacity: 1;
-  transform: scale(1);
-}
-
-.cart__item [type="checkbox"]:checked:focus + label:before,
-.cart__item [type="checkbox"]:not(:checked):focus + label:before {
-  border: 2px dotted blue;
-}
-
 .toy__name {
   font-family: "Montserrat-Regular";
   font-weight: normal;
@@ -2034,6 +2001,7 @@ template {
 }
 
 .toy__price {
+  margin-bottom: 1.25rem;
   font-family: "Montserrat-SemiBold";
   font-weight: 600;
   font-style: normal;
@@ -2112,7 +2080,7 @@ template {
   font-family: "Montserrat-Regular";
   font-weight: normal;
   font-style: normal;
-  font-size: 2.5rem;
+  font-size: 1.375rem;
   line-height: 50%;
   color: #000000;
 }
@@ -2133,6 +2101,12 @@ template {
   font-size: 0.9375rem;
   line-height: 50%;
   color: #FFFFFF;
+  cursor: pointer;
+}
+
+.delete__toy {
+  width: 2.3125rem;
+  height: 2.3125rem;
   cursor: pointer;
 }
 
@@ -2252,6 +2226,11 @@ template {
 }
 
 @media (min-width: 560px) {
+  .cart__num {
+    top: 2.9375rem;
+    right: 1.0625rem;
+  }
+
   .cart {
     top: 3.75rem;
     right: 1.875rem;
@@ -2476,11 +2455,6 @@ template {
     font-size: 1.5rem;
   }
 
-  .cart__item [type="checkbox"]:not(:checked) + label,
-  .cart__item [type="checkbox"]:checked + label {
-    transform: translate(-66px, 42px);
-  }
-
   .toy__name {
     font-size: 1.25rem;
   }
@@ -2564,6 +2538,10 @@ template {
 @media (min-width: 768px) {
   .header {
     background-position: 43% 25px, center;
+  }
+
+  .cart__num {
+    right: 5rem;
   }
 
   .cart {
@@ -2735,16 +2713,14 @@ template {
     flex-direction: row;
   }
 
-  .cart__item [type="checkbox"]:not(:checked) + label,
-  .cart__item [type="checkbox"]:checked + label {
-    transform: translate(-10px, -18px);
-  }
-
   .toy__name {
+    min-width: 12.5rem;
     margin-right: 1.875rem;
   }
 
   .toy__price {
+    min-width: 7.5rem;
+    margin-bottom: 0;
     font-size: 1.625rem;
   }
 
@@ -2854,7 +2830,7 @@ template {
   }
 
   .card .to-catalog-btn,
-  .card .to-cart-btn {
+  .card .to-cart-btn--card {
     height: 4.0625rem;
     font-size: 1rem;
   }
@@ -3237,10 +3213,6 @@ template {
     top: 2.8125rem;
   }
 
-  .card {
-    min-height: 32.1875rem;
-  }
-
   .card .logo {
     width: 10.625rem;
   }
@@ -3493,35 +3465,19 @@ template {
     z-index: 5;
     bottom: 0;
     right: 0;
-    width: 66.875rem;
+    width: 75rem;
     height: 0.0625rem;
     background: rgba(0, 0, 0, 0.32);
   }
 
-  .cart__item [type="checkbox"]:not(:checked) + label,
-  .cart__item [type="checkbox"]:checked + label {
-    transform: translate(66px, -14px);
-  }
-
-  .cart__item [type="checkbox"]:not(:checked) + label::before,
-  .cart__item [type="checkbox"]:checked + label::before {
-    width: 2rem;
-    height: 2rem;
-  }
-
-  .cart__item [type="checkbox"]:not(:checked) + label::after,
-  .cart__item [type="checkbox"]:checked + label::after {
-    width: 2rem;
-    height: 2rem;
-  }
-
   .toy__name {
-    width: 18.75rem;
+    min-width: 18.75rem;
     font-size: 2.3125rem;
   }
 
   .toy__price {
-    width: 7.5rem;
+    margin-bottom: 0;
+    min-width: 7.5rem;
     font-size: 1.9375rem;
   }
 
@@ -3554,6 +3510,7 @@ template {
 
   .total__num {
     width: 19.125rem;
+    font-size: 2.5rem;
   }
 
   .cart-btn {
@@ -3573,6 +3530,11 @@ template {
 @media (min-width: 1440px) {
   .header {
     background-position: 43% 0, center;
+  }
+
+  .cart__num {
+    top: 5.375rem;
+    right: 4.0625rem;
   }
 
   .cart {
@@ -3842,6 +3804,11 @@ template {
 }
 
 @media (min-width: 1920px) {
+  .cart__num {
+    top: 5.3125rem;
+    right: 4.125rem;
+  }
+
   .back-arrow {
     top: 6.6875rem;
     left: 6.25rem;
@@ -4013,7 +3980,7 @@ template {
   }
 
   .card .to-catalog-btn,
-  .card .to-cart-btn {
+  .card .to-cart-btn--card {
     height: 4.9375rem;
     font-size: 1.25rem;
   }
@@ -4042,12 +4009,7 @@ template {
   }
 
   .cart__item::after {
-    width: 80.875rem;
-  }
-
-  .cart__item [type="checkbox"]:not(:checked) + label,
-  .cart__item [type="checkbox"]:checked + label {
-    transform: translate(150px, -14px);
+    width: 93.75rem;
   }
 }
 
